--- a/index.html
+++ b/index.html
@@ -4,10 +4,89 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QFC Fast Food</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+    }
+    .producto {
+      margin: 10px 0;
+    }
+    #pedido {
+      margin-top: 20px;
+      border-top: 1px solid #ccc;
+      padding-top: 10px;
+    }
+    button {
+      margin-left: 10px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Bienvenido a QFC</h1>
-  <script src="js/app.js"></script>
+  <h1>QFC - Sistema de Transacciones</h1>
+
+  <h2>Menú</h2>
+  <div id="menu"></div>
+
+  <div id="pedido">
+    <h2>Pedido Actual</h2>
+    <ul id="listaPedido"></ul>
+    <p>Total: $<span id="total">0</span></p>
+    <button onclick="finalizarPedido()">Finalizar Pedido</button>
+  </div>
+
+  <script>
+    // Lista de productos disponibles
+    const productos = [
+      { id: 1, nombre: "Hamburguesa Clásica", precio: 5.00 },
+      { id: 2, nombre: "Papas Fritas", precio: 2.50 },
+      { id: 3, nombre: "Refresco", precio: 1.75 }
+    ];
+
+    // Pedido actual
+    let pedido = [];
+
+    // Mostrar el menú
+    const menuDiv = document.getElementById("menu");
+    productos.forEach(prod => {
+      const div = document.createElement("div");
+      div.className = "producto";
+      div.innerHTML = `${prod.nombre} - $${prod.precio.toFixed(2)}
+        <button onclick="agregarAlPedido(${prod.id})">Agregar</button>`;
+      menuDiv.appendChild(div);
+    });
+
+    function agregarAlPedido(id) {
+      const producto = productos.find(p => p.id === id);
+      pedido.push(producto);
+      actualizarPedido();
+    }
+
+    function actualizarPedido() {
+      const lista = document.getElementById("listaPedido");
+      lista.innerHTML = "";
+      let total = 0;
+
+      pedido.forEach((item, index) => {
+        total += item.precio;
+        const li = document.createElement("li");
+        li.textContent = `${item.nombre} - $${item.precio.toFixed(2)}`;
+        lista.appendChild(li);
+      });
+
+      document.getElementById("total").textContent = total.toFixed(2);
+    }
+
+    function finalizarPedido() {
+      if (pedido.length === 0) {
+        alert("No hay productos en el pedido.");
+        return;
+      }
+
+      alert("¡Pedido finalizado! Total: $" + document.getElementById("total").textContent);
+      pedido = [];
+      actualizarPedido();
+    }
+  </script>
 </body>
 </html>
